testsuite/tests/ffi/should_fail/T3066.hs
{-# LANGUAGE ForeignFunctionInterface, RankNTypes #-}
module Foo where

import Foreign
type X u = Ptr ()
foreign import ccall bla :: (forall u. X u) -> IO ()

